# userspace-tcp-stack

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  docker-compose.yml
apps/: CMakeLists.txt  chat_client.cpp  chat_server.cpp
bench/: README.md  plot_results.py  run_echo_benchmark.py  run_gcp_vm.sh
bench/results/gcp-e2-standard-2-20260712/: README.md  echo.json  git-revision.txt  lscpu.txt  uname.txt
docker/: Dockerfile
docs/: protocol_notes.md  state_machine.md
include/: dispatch.h  icmp.h  ip.h  socket_api.h  tcp.h  tun.h  udp.h
scripts/: setup_tun.sh  teardown_tun.sh
src/: dispatch.cpp  icmp.cpp  icmp.rs  ip.cpp  ip.rs  lib.rs  main.cpp  socket_api.cpp  stack.rs  tcp.cpp  tcp.rs  tun.cpp  tun.rs  udp.cpp  udp.rs
tests/: CMakeLists.txt  checksum_test.cpp  retransmission.rs  retransmission_test.cpp  sockopt.rs  sockopt_test.cpp  tcp_state_test.cpp  udp_socket_test.cpp  zero_window_persist.rs
